--- a/JAPI/pom.xml
+++ b/JAPI/pom.xml
@@ -71,6 +71,14 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+		</dependency>		 
+		<dependency>
+           <groupId>jakarta.persistence</groupId>
+           <artifactId>jakarta.persistence-api</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webflux</artifactId>
 			<scope>test</scope>
